--- a/Indie Game Space/Project/IGS/appsettings.json
+++ b/Indie Game Space/Project/IGS/appsettings.json
@@ -1,13 +1,11 @@
 {
+  "ConnectionStrings": {
+    "WebApiDatabase": "server=localhost; database=mydb; user=root; password=1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server= 'your server';Database = 'name data'; Trusted_Connection=True;"
-  },
-  
-  "AllowedHosts": "*"
+  }
 }
